--- a/src/ShriekFx.CMS.Admin/ShriekFx.CMS.Admin.csproj
+++ b/src/ShriekFx.CMS.Admin/ShriekFx.CMS.Admin.csproj
@@ -5,6 +5,7 @@
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
