--- a/src/Shriek.CMS.Domain/Shriek.CMS.Domain.csproj
+++ b/src/Shriek.CMS.Domain/Shriek.CMS.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Account\" />
+    <PackageReference Include="Shriek" Version="1.0.0-preview-10051" />
   </ItemGroup>
 
 </Project>
