--- a/src/Shriek.CMS.UI.Admin/angular.json
+++ b/src/Shriek.CMS.UI.Admin/angular.json
@@ -27,11 +27,29 @@
               "ClientApp/assets"
             ],
             "styles": [
-              "ClientApp/styles.scss"
+              {
+                "input": "node_modules/normalize.css/normalize.css",
+                "bundleName": "lib"
+              },
+              {
+                "input": "node_modules/material-design-icons/iconfont/material-icons.css",
+                "bundleName": "lib"
+              },
+              {
+                "input": "node_modules/quill/dist/quill.snow.css",
+                "bundleName": "lib"
+              },
+              {
+                "input": "ClientApp/styles.scss",
+                "bundleName": "stbui"
+              }
             ],
             "scripts": []
           },
           "configurations": {
+            "development": {
+              "extractCss": true
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -49,6 +67,23 @@
               "vendorChunk": false,
               "buildOptimizer": true,
               "serviceWorker": true
+            },
+            "github": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.github.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         },
