--- a/src/Shriek.CMS.UI.Admin/package.json
+++ b/src/Shriek.CMS.UI.Admin/package.json
@@ -28,6 +28,7 @@
     "@angular/common": "6.0.2",
     "@angular/compiler": "6.0.2",
     "@angular/core": "6.0.2",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "6.0.2",
     "@angular/http": "6.0.2",
     "@angular/material": "^6.0.2",
