--- a/src/Shriek.CMS.UI.Admin/tsconfig.json
+++ b/src/Shriek.CMS.UI.Admin/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noUnusedLocals": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
@@ -15,11 +15,6 @@
     "lib": [
       "es2017",
       "dom"
-    ],
-    "paths": {
-      "@app/*": [
-        "app/*"
-      ]
-    }
+    ]
   }
 }
