--- a/src/Shriek.CMS.UI.Admin/angular.json
+++ b/src/Shriek.CMS.UI.Admin/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "aspnetcorespa": {
+    "angular-material-app": {
       "root": "",
       "sourceRoot": "ClientApp",
       "projectType": "application",
@@ -50,11 +50,11 @@
             "development": {
               "extractCss": true
             },
-            "production": {
+            "github": {
               "fileReplacements": [
                 {
                   "replace": "ClientApp/environments/environment.ts",
-                  "with": "ClientApp/environments/environment.prod.ts"
+                  "with": "ClientApp/environments/environment.github.ts"
                 }
               ],
               "optimization": true,
@@ -65,14 +65,30 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
-              "serviceWorker": true
+              "buildOptimizer": true
             },
-            "github": {
+            "ngsw": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.github.ts"
+                  "replace": "ClientApp/environments/environment.ts",
+                  "with": "ClientApp/environments/environment.ngsw.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            },
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "ClientApp/environments/environment.ts",
+                  "with": "ClientApp/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -90,18 +106,27 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "aspnetcorespa:build"
+            "browserTarget": "angular-material-app:build"
           },
           "configurations": {
+            "development": {
+              "browserTarget": "angular-material-app:build:development"
+            },
+            "github": {
+              "browserTarget": "angular-material-app:build:github"
+            },
+            "ngsw": {
+              "browserTarget": "angular-material-app:build:ngsw"
+            },
             "production": {
-              "browserTarget": "aspnetcorespa:build:production"
+              "browserTarget": "angular-material-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "aspnetcorespa:build"
+            "browserTarget": "angular-material-app:build"
           }
         },
         "test": {
@@ -112,11 +137,11 @@
             "tsConfig": "ClientApp/tsconfig.spec.json",
             "karmaConfig": "ClientApp/karma.conf.js",
             "styles": [
-              "ClientApp/styles.scss"
+              "styles.scss"
             ],
             "scripts": [],
             "assets": [
-              "ClientApp/assets/favicon.ico",
+              "ClientApp/favicon.ico",
               "ClientApp/assets"
             ]
           }
@@ -142,7 +167,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
-            "outputPath": "ClientApp/dist-server",
+            "outputPath": "dist-server",
             "main": "ClientApp/main.server.ts",
             "tsConfig": "ClientApp/tsconfig.server.json",
             "progress": true
@@ -161,7 +186,7 @@
         }
       }
     },
-    "aspnetcorespa-e2e": {
+    "angular-material-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -169,7 +194,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "aspnetcorespa:serve"
+            "devServerTarget": "angular-material-app:serve"
           }
         },
         "lint": {
@@ -184,5 +209,5 @@
       }
     }
   },
-  "defaultProject": "aspnetcorespa"
+  "defaultProject": "angular-material-app"
 }
